# muxa

./: .clangd  .gitignore  CMakeLists.txt  README.md
Include/muxa/: constants.hpp  fib.hpp  frame.hpp  frameRate.hpp  math.hpp  scales.hpp  types.hpp  wave.hpp  waveForms.hpp
Include/muxa/automata/: ax0.hpp
Include/muxa/generative/: genx0.hpp
Include/muxa/synths/: sya.cpp  sya.hpp
Source/: main.cpp  program.cpp
Source/automata/ax0.hpp/: main.cpp
Source/fib.hpp/: main.cpp
Source/frame.hpp/: main.cpp
Source/framerate.hpp/: main.cpp
Source/generative/genx0.hpp/: main.cpp
Source/math.hpp/: main.cpp
Source/scales.hpp/: main.cpp
Source/synths/sya.hpp/: main.cpp
Source/wave.hpp/: main.cpp
Source/waveForms.hpp/: main.cpp
